--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ coverage.xml
 /data/
 
 # exclude models from source control by default
-#models/
+/models/
 
 # Mac OS-specific storage files
 .DS_Store
