--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,7 @@ coverage.xml
 .ipynb_checkpoints/
 
 # exclude data from source control by default
-/data/
+#/data/
 
 # exclude models from source control by default
 /models/
