--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-numpy~=1.19.2
-torch~=1.6.0
-scikit-learn~=0.23.2
-lifelines~=0.25.4
-ray~=0.8.7
-pandas~=1.1.2
-iisignature~=0.24
-lightgbm~=3.0.0
-matplotlib~=3.3.2
-seaborn~=0.11.0
-setuptools~=50.3.0
-matplotlib-venn
+torch==1.6.0
+joblib==0.16.0
+lightgbm==3.0.0
+pandas==1.1.2
+iisignature==0.24
+lifelines==0.25.4
+seaborn==0.10.1
+scipy==1.5.2
+nevergrad==0.2.3
+matplotlib_venn==0.11.5
+numpy==1.19.2
+ray==0.8.7
+dill==0.3.1.1
+matplotlib==3.3.2
+scikit_learn==0.23.2
