--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ numpy~=1.19.2
 torch~=1.6.0
 scikit-learn~=0.23.2
 lifelines~=0.25.4
-ray~=0.8.7
+ray[tune]~=0.8.7
 pandas~=1.1.2
 iisignature~=0.24
 lightgbm~=3.0.0
