--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-dill~=0.3.3
-numpy~=1.19.2
-torch~=1.6.0
-scikit-learn~=0.23.2
-lifelines~=0.25.4
-ray[tune]~=0.8.7
-pandas~=1.1.2
-iisignature~=0.24
-lightgbm~=3.0.0
-matplotlib~=3.3.2
-seaborn~=0.11.0
-setuptools~=50.3.0
-matplotlib-venn
+dill==0.3.3
+numpy==1.20.3
+torch==1.6.0
+scikit-learn==0.24.2
+lifelines==0.25.4
+ray[tune]==0.8.7
+pandas==1.2.4
+iisignature==0.24
+lightgbm==3.0.0
+matplotlib==3.4.2
+seaborn==0.11.0
+setuptools==50.3.0
+matplotlib-venn==0.11.6
 gdown
+psycopg2==3.13.0
