--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,15 @@
-dill==0.3.3
-numpy==1.20.3
-torch==1.6.0
-scikit-learn==0.24.2
-lifelines==0.25.4
-ray[tune]==0.8.7
-pandas==1.2.4
+dill==0.3.1.1
+seaborn==0.10.0
+matplotlib==3.1.3
+numpy==1.17.4
+pandas==0.25.3
+lightgbm==2.3.1
+joblib==0.14.0
+ray==0.8.5
+scipy==1.3.3
+torch==1.3.0
 iisignature==0.24
-lightgbm==3.0.0
-matplotlib==3.4.2
-seaborn==0.11.0
-setuptools==50.3.0
-matplotlib-venn==0.11.6
-gdown
-psycopg2==3.13.0
+lifelines==0.26.0
+matplotlib_venn==0.11.6
+scikit_learn==0.24.2
+
