--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+ray[tune]==0.8.5
+scikit_learn==0.24.2
+scipy==1.3.3
+seaborn==0.10.0
+torch==1.3.0
 dill==0.3.1.1
 iisignature==0.24
 joblib==0.14.0
@@ -7,8 +12,3 @@ matplotlib==3.1.3
 matplotlib_venn==0.11.6
 numpy==1.17.4
 pandas==0.25.3
-ray==0.8.5  
-scikit_learn==0.24.2
-scipy==1.3.3
-seaborn==0.10.0
-torch==1.3.0
